# Rite

./: .gitignore  Cargo.toml  INSTALL.md  LICENSE-APACHE  LICENSE-MIT  QUICKSTART.md  README.md  Taskfile.yaml  cliff.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  release.yml  security.yml
apps/desktop/: eslint.config.js  index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 001_initial_schema.sql  README.md
apps/desktop/src-tauri/src/: auth.rs  commands.rs  connection.rs  connections_manager.rs  db.rs  known_hosts.rs  local_terminal.rs  main.rs  pending_host_keys.rs  ssh_config.rs  state.rs  terminal.rs  theme.rs
apps/desktop/src/assets/themes/: default.toml
apps/desktop/src/components/: CollectionsManager.tsx  ConnectionForm.tsx  ConnectionList.tsx  Dropdown.tsx  ErrorBoundary.tsx  ImportSSHConfigModal.tsx  MainScreen.tsx  PaneContainer.tsx  QuickSSHModal.tsx  Settings.tsx  SetupScreen.tsx  SplitPane.tsx  Terminal.tsx  TerminalManager.tsx  Toast.tsx  UnlockScreen.tsx
apps/desktop/src/contexts/: PaneDragContext.tsx
apps/desktop/src/i18n/: i18n.tsx
apps/desktop/src/i18n/locales/: en.json  fr.json
apps/desktop/src/store/: authStore.ts  collectionsStore.ts  connectionsStore.ts  settingsStore.ts
apps/desktop/src/types/: pane.ts
apps/desktop/src/utils/: dropZone.ts  errorHandler.ts  paneTree.ts  tauri.ts  terminalPool.ts
docs/: ARCHITECTURE.md  RELEASE.md  ROADMAP.md  SECURITY.md
